--- a/style.css
+++ b/style.css
@@ -189,11 +189,89 @@ a {
     margin-top: 20px;
 }
 .feature-card{
+  display: flex;
     flex-direction: column;
     gap: 20px;
     max-width: 30%;
+    margin-top: 20px;
     align-items: center;
+}
+.flex{
+    display:flex;
+}
+.big-features-section {
+    padding: 30px var(--padding-inline-section);
+}
+.container {
+    overflow: hidden;
+}
+.big-feature-container {
+    gap: 30px;
+}
+.flex{
+    display: flex;
+}
+.feature-img img{
+    width: 100%;
+}
+.feature-desc {
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    gap:10px
+}
+.big-features-section {
+    padding: 30px var(--padding-inline-section);
+}
+.section-header {
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+}
+.example-area {
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+
+.example-area {
+    justify-content: space-between;
+    margin-block: 30px;
 }
 .flex {
     display: flex;
+}
+.example-card {
+    flex-direction: column;
+    width: 23%;
+    background-color: black;
+    color: white;
+    /* min-height: 300px; */
+    justify-content: end;
+    padding: 25px;
+    transition: 0.2s ease-out;
+    }
+.example-card:nth-child(1) {
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset_37.jpeg);
+    background-size: cover;
+}
+.example-card:nth-child(2) {
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset_38.png);
+    background-size: cover;
+}
+.example-card:nth-child(3) {
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset_39.png);
+    background-size: cover;
+}
+.example-card:nth-child(4) {
+    background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url(./assets/asset_31.png);
+    background-size: cover;
+}
+.example-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 10px var(--secondary-text-color);
+}
+.footer-container {
+    align-items: start;
+    justify-content: space-between;
 }
